application/external-secrets-vault/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: external-secrets-vault
  name: external-secrets-vault
  labels:
    app: external-secrets-vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-secrets-vault
  template:
    metadata:
      labels:
        app: external-secrets-vault
    spec:
      containers:
        - name: external-secrets-vault
          image: "ghcr.io/anthonydurot/devfest-2021:main"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
