application/external-secrets-vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-secrets-vault
  labels:
    app: external-secrets-vault
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: external-secrets-vault
