application/external-secrets-vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-secrets-vault
  namespace: external-secrets-vault
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: external-secrets-vault.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-secrets-vault
            port:
              number: 8080
